# elixir-rust-cart-engine

./: .credo.exs  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_RU.md  docker-compose.yml  mix.exs
bench/: cart_valuation_bench.exs  combinatorial_valuation_bench.exs  mailbox_bottleneck_bench.exs
lib/: cart_engine.ex
lib/cart_engine/: application.ex  cart_server.ex  cluster_connector.ex  distributed_router.ex  elixir_combinatorial.ex  elixir_valuation.ex  rust_bridge.ex
native/: Cargo.toml  clippy.toml
native/cart_engine_nif/: Cargo.toml
native/cart_engine_nif/src/: lib.rs
test/: cart_engine_test.exs
